k8-deployment/audio-primary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audio-primary
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: audio
      version: primary
  template:
    metadata:
      labels:
        app: audio
        version: primary
    spec:
      containers:
      - name: audio-container
        image: 495599763524.dkr.ecr.eu-central-1.amazonaws.com/tf-flagger:audio
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: audio-svc-primary
  namespace: apps
  labels:
    app: audio
    version: primary
spec:
  ports:
  - port: 3000
    name: audio-port
    protocol: TCP
  selector:
    app: audio
