k8-deployment/video-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-canary
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: video
      version: canary
  template:
    metadata:
      labels:
        app: video
        version: canary
    spec:
      containers:
      - name: video-container
        image: 495599763524.dkr.ecr.eu-central-1.amazonaws.com/tf-flagger:video
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: video-svc-canary
  namespace: apps
  labels:
    app: video
    version: canary
spec:
  ports:
  - port: 3000
    name: video-port
    protocol: TCP
  selector:
    app: video
