k8-deployment/images-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: images-ingress-route
  namespace: apps
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`demo-images.anup.co.in`)
      kind: Rule
      services:
        - name: images-svc
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: images-cert
