k8-deployment/pavan-certificate-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: apps
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-video
  namespace: apps
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pavan.anup.co.in`)
      kind: Rule
      services:
        - name: video-svc
          port: 3000
      middlewares:
        - name: redirect-to-https
          namespace: apps
        - name: default-headers
          namespace: traefik

  tls:
    secretName: pavan-cert
