k8-deployment/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: traefik
  labels:
    app: nginx
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
      protocol: TCP
  selector:
    app: nginx
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-images
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`images.anup.co.in`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: image-nginx-cert
