k8-deployment/video-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      containers:
      - name: video-container
        image: 495599763524.dkr.ecr.eu-central-1.amazonaws.com/tf-flagger:video
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: video-svc
  namespace: apps
  labels:
    app: video
spec:
  ports:
  - port: 3000
    name: video-port
    protocol: TCP
  selector:
    app: video
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-video
  namespace: apps
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`video.anup.co.in`)
      kind: Rule
      services:
        - name: video-svc
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: video-cert
